ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------

12/07/02 russ

	* added dAreConnectedExcluding().

11/30/02 russ

	* added the ray geom class.

	* added the dGeomXXXPointDepth() functions.

	* added a collision test infrastructure, and some more tests.

11/24/02 russ

	* added support for multiple box-box contacts.

11/10/02 russ

	* added new collision system. select between the old/new system by
	  setting the ODE_OLD_COLLISION variable in config/user-settings.

10/28/02 russ

	* fixed two problems in the LCP code to improve the reliability of
	  the dContactApprox1 contact mode.

	* added a FAQ question about rolling bodies getting stuck when they
	  hit multiple geoms.

09/08/02 russ

	* added dClosestLineSegmentPoints().
	* implemented dCollideCB().

08/28/02 russ

	* added dJointSetFeedback() and dJointGetFeedback().

08/05/02 russ

	* added dGeomTransformSetInfo() and dGeomTransformGetInfo().

07/13/02 russ

	* added dBodySetForce(), dBodySetTorque(), dWorldImpulseToForce(),
	  dBodyGetPosRelPoint(), dBodyGetPosRelPoint(), dBodyVectorToWorld(),
	  dBodyVectorFromWorld().

	* added dBodyGetPointVel() (thanks to Colin Reed).

	* added a new C++ interface (from Martin C. Martin, with modifications
	  by russ). the old C++ interface is now in odecpp_old.h.

06/25/02 russ

	* added an additional BSD-style licensing option for ODE.

06/23/02 russ

	* added dCloseODE(), contributed by Nate Waddoups and David McClurg.

05/16/02 russ

	* added dSpaceQuery(), contributed by Nate Waddoups.

04/07/02 russ

	* added a section to the documentation for universal joints.
	  this includes a picture of the joint.

04/05/02 russ
